--- a/app.html
+++ b/app.html
@@ -52,12 +52,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link"  href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="app.html">The App</a>
+              <a class="nav-link active" aria-current="page" href="app.html"
+                >The App</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="code.html">The Code</a>
@@ -73,7 +73,110 @@
       </div>
     </nav>
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 border-end">
+            <h3>Loan Calculator</h3>
+            <div class="container mt-3 p-2">
+              <form class="row gy-3">
+                <input
+                  type="number"
+                  id="loanAmount"
+                  class="form-control"
+                  placeholder="Enter your loan amount"
+                  aria-label="Loan amount"
+                />
+
+                <input
+                  type="number"
+                  id="time"
+                  class="form-control"
+                  placeholder="Enter the loan time in months"
+                  aria-label="Enter the interest rate"
+                />
+
+                <input
+                  type="number"
+                  id="interestRate"
+                  class="form-control"
+                  placeholder="Enter your interest rate"
+                  aria-label="Enter the interest rate"
+                />
+                <div class="d-flex justify-content-md-end">
+                  <button
+                    class="btn btn-dark btn-lg"
+                    id="btnSubmit"
+                    type="button"
+                  >
+                    Calculate
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="col-6">
+            <div class="col-12">
+              <h5 class="mt-3 d-flex justify-content-md-center">
+                Your Monthly Payments:
+              </h5>
+            </div>
+            <div class="col-12">
+              <h1
+                class="mt-3 d-flex justify-content-md-center"
+                id="monthlyPayments"
+              >
+                $0.00
+              </h1>
+            </div>
+            <div class="row">
+              <div class="col-6">Total principal:</div>
+
+              <div
+                class="col-6 d-flex justify-content-md-end"
+                id="totalPrincipal"
+              >
+                $
+              </div>
+
+              <div class="col-6">Total interest:</div>
+
+              <div
+                class="col-6 d-flex justify-content-md-end"
+                id="totalInterests"
+              >
+                $
+              </div>
+
+              <div class="col-6">Total cost:</div>
+
+              <div class="col-6 d-flex justify-content-md-end" id="totalCost">
+                $
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="col-12">
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Month</th>
+                    <th>Payment</th>
+                    <th>principal</th>
+                    <th>Interest</th>
+                    <th>Total Interest</th>
+                    <th>Balance</th>
+                  </tr>
+                </thead>
+                <tbody id="results">
+                  <!-- Overwrite in javascript -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer mt-auto py-3 sticky-footer">
@@ -116,11 +219,25 @@
         </div>
       </div>
     </footer>
+    <template id="tmpResults">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </template>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
     <script src="js/site.js"></script>
+    <script>
+      document.getElementById('btnSubmit').addEventListener('click',getValues)
+    </script>
   </body>
 </html>
