--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A coding Project By John Zhang</title>
+    <title>Loan helper: A coding Project By John Zhang</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -63,10 +63,10 @@
               <a class="nav-link" href="code.html">The Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/Ningyu-Zhang98/LoanShark">Git Repo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">About</a>
+              <a class="nav-link" target="_blank" href="https://johnzhang-portforlio.netlify.app/">About</a>
             </li>
           </ul>
         </div>
@@ -79,35 +79,38 @@
             <h3>Loan Calculator</h3>
             <div class="container mt-3 p-2">
               <form class="row gy-3">
-                <input
-                  type="number"
-                  id="loanAmount"
-                  class="form-control"
-                  placeholder="Enter your loan amount"
-                  aria-label="Loan amount"
-                />
-
-                <input
-                  type="number"
-                  id="time"
-                  class="form-control"
-                  placeholder="Enter the loan time in months"
-                  aria-label="Enter the interest rate"
-                />
-
-                <input
-                  type="number"
-                  id="interestRate"
-                  class="form-control"
-                  placeholder="Enter your interest rate"
-                  aria-label="Enter the interest rate"
-                />
+                <div class="form-group">
+                  <label for="loanAmount" class="lead">Loan amount</label>
+                  <input
+                    type="number"
+                    id="loanAmount"
+                    class="form-control"
+                    placeholder="Enter your loan amount"
+                    aria-label="Loan amount"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="time" class="lead">Loan time</label>
+                  <input
+                    type="number"
+                    id="time"
+                    class="form-control"
+                    placeholder="Enter the loan time in months"
+                    aria-label="Enter the interest rate"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="interestRate" class="lead">Interest rate</label>
+                  <input
+                    type="number"
+                    id="interestRate"
+                    class="form-control"
+                    placeholder="Enter your interest rate"
+                    aria-label="Enter the interest rate"
+                  />
+                </div>
                 <div class="d-flex justify-content-md-end">
-                  <button
-                    class="btn btn-dark btn-lg"
-                    id="btnSubmit"
-                    type="button"
-                  >
+                  <button class="btn btn-dark" id="btnSubmit" type="button">
                     Calculate
                   </button>
                 </div>
@@ -129,28 +132,31 @@
                 $0.00
               </h1>
             </div>
-            <div class="row">
-              <div class="col-6">Total principal:</div>
+            <div class="row mt-5">
+              <div class="col-6"><div class="lead">Total principal:</div></div>
 
               <div
-                class="col-6 d-flex justify-content-md-end"
+                class="col-6 d-flex justify-content-md-end lead"
                 id="totalPrincipal"
               >
                 $
               </div>
 
-              <div class="col-6">Total interest:</div>
+              <div class="col-6"><div class="lead">Total interest:</div></div>
 
               <div
-                class="col-6 d-flex justify-content-md-end"
+                class="col-6 d-flex justify-content-md-end lead"
                 id="totalInterests"
               >
                 $
               </div>
 
-              <div class="col-6">Total cost:</div>
+              <div class="col-6"><div class="lead">Total cost:</div></div>
 
-              <div class="col-6 d-flex justify-content-md-end" id="totalCost">
+              <div
+                class="col-6 d-flex justify-content-md-end lead"
+                id="totalCost"
+              >
                 $
               </div>
             </div>
@@ -237,7 +243,7 @@
     ></script>
     <script src="js/site.js"></script>
     <script>
-      document.getElementById('btnSubmit').addEventListener('click',getValues)
+      document.getElementById("btnSubmit").addEventListener("click", getValues);
     </script>
   </body>
 </html>
