--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>Prime Check: A coding Project By John Zhang</title>
+    <title>Loan helper: A coding Project By John Zhang</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -63,10 +63,10 @@
               <a class="nav-link" href="code.html">The Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/Ningyu-Zhang98/LoanShark">Git Repo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">About</a>
+              <a class="nav-link" target="_blank" href="https://johnzhang-portforlio.netlify.app/">About</a>
             </li>
           </ul>
         </div>
@@ -78,14 +78,15 @@
         <div class="row g-5 py-5 row-cols-1 row-cols-md-2">
           <div class="col order-last order-md-first">
             <h1 class="display-5 fw-bold 1h-1 mb-3">
-              APP NAME: A CODING PROJECT
+              Loan helper: A CODING PROJECT
             </h1>
             <h4 class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-              sint aut adipisci nesciunt fugiat aspernatur omnis ex maxime
-              deleniti quia sapiente labore, ipsa doloribus unde nobis? Eligendi
-              alias perferendis doloribus?
-              <strong>Bold</strong>
+              Time to be a responsible adult and take charge of your finance! Do
+              you really know how much money are you paying back each month when
+              borrowed a loan? Or how much of it is
+              <strong>interest</strong> and how much of it is
+              <strong>principal</strong>? Let this loan helper to take care of
+              the broing math for you so you can continue focusing on reaching the next financial milestone!
             </h4>
             <ul class="fa-ul pt-2 checklist">
               <li>
@@ -147,8 +148,8 @@
 
           <div class="col">
             <img
-              src="img/primeCheck.svg"
-              alt="Prime Number LOGO"
+              src="img/LoanHelper.svg"
+              alt="Loan helper image"
               class="img-fluid center-block d-block mx-auto"
               width="1000"
               height="800"
